fixe:cards criados

--- a/index.html
+++ b/index.html
@@ -16,5 +16,26 @@
     <button class="btn__top">Nova Transação</button>
    </div> 
   </header>
+  <main>
+    <section class="container">
+      <div class="cards">
+        <p class="cards__title">Entradas</p>
+        <img src="assets/img/icon-entradas.png"alt="">
+        <p class="cards__description">R$ 0,00</p>
+      </div>
+
+      <div class="cards">
+        <p class="cards__title">Saídas</p>
+        <img src="assets/img/icon-entradas.png"alt="">
+        <p class="cards__description">R$ 0,00</p>
+      </div>
+
+      <div class="cards">
+        <p class="cards__title">Total</p>
+        <img src="assets/img/icon-entradas.png"alt="">
+        <p class="cards__description">R$ 0,00</p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
