--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </div> 
   </header>
   <main>
-    <section class="container">
+    <section class="cards-principal">
       <div class="cards">
         <p class="cards__title">Entradas</p>
         <img src="assets/img/icon-entradas.png"alt="">
