--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
   <main>
     <section class="cards-principal">
       <div class="cards">
-        <p class="cards__title">Entradas</p>
+        <h3 class="cards__title">Entradas<h3/>
         <img src="assets/img/icon-entradas.png"alt="">
         <p class="cards__description">R$ 0,00</p>
       </div>
 
       <div class="cards">
-        <p class="cards__title">Saídas</p>
+        <h3 class="cards__title">Saídas<h3/>
         <img src="assets/img/icon-entradas.png"alt="">
         <p class="cards__description">R$ 0,00</p>
       </div>
 
       <div class="cards">
-        <p class="cards__title">Total</p>
-        <img src="assets/img/icon-entradas.png"alt="">
+        <h3 class="cards__title">Total<h3/>
+        <img src="assets/img/icon-total.svg"alt="">
         <p class="cards__description">R$ 0,00</p>
       </div>
     </section>
