fix: envolvendo cards em um container

--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
   </header>
   <main>
     <section class="cards-principal">
-      <div class="cards">
-        <h3 class="cards__title">Entradas<h3/>
-        <img src="assets/img/icon-entradas.png"alt="">
-        <p class="cards__description">R$ 0,00</p>
-      </div>
-
-      <div class="cards">
-        <h3 class="cards__title">Saídas<h3/>
-        <img src="assets/img/icon-entradas.png"alt="">
-        <p class="cards__description">R$ 0,00</p>
-      </div>
-
-      <div class="cards">
-        <h3 class="cards__title">Total<h3/>
-        <img src="assets/img/icon-total.svg"alt="">
-        <p class="cards__description">R$ 0,00</p>
+      <div class="container">
+        <div class="cards">
+          <h1 class="cards__title">Entradas<h1/>
+          <img src="assets/img/icon-entradas.png"alt="">
+          <p class="cards__description">R$ 0,00<p/>
+        </div>
+  
+        <div class="cards">
+          <h1 class="cards__title">Saídas<h1/>
+          <img src="assets/img/icon-entradas.png"alt="">
+          <p class="cards__description">R$ 0,00<p/>
+        </div>
+  
+        <div class="cards">
+          <h1 class="cards__title">Total<h1/>
+          <img src="assets/img/icon-total.svg"alt="">
+          <p class="cards__description">R$ 0,00<p/>
+        </div>
       </div>
     </section>
   </main>
