fix: Ajustando posicionamentos dos cards e backgrounds

--- a/index.html
+++ b/index.html
@@ -20,20 +20,26 @@
     <section class="cards-principal">
       <div class="container">
         <div class="cards">
-          <h1 class="cards__title">Entradas<h1/>
-          <img src="assets/img/icon-entradas.png"alt="">
+          <div>
+            <h3 class="cards__title">Entradas<h3/>
+            <img src="assets/img/icon-entradas.svg"alt="">
+          </div>
           <p class="cards__description">R$ 0,00<p/>
         </div>
-  
+
         <div class="cards">
-          <h1 class="cards__title">Saídas<h1/>
-          <img src="assets/img/icon-entradas.png"alt="">
+          <div>
+            <h3 class="cards__title">Saídas<h3/>
+            <img src="assets/img/icon-saídas.svg"alt="">
+          </div>
           <p class="cards__description">R$ 0,00<p/>
         </div>
-  
+
         <div class="cards">
-          <h1 class="cards__title">Total<h1/>
-          <img src="assets/img/icon-total.svg"alt="">
+          <div>
+            <h3 class="cards__title">Total<h3/>
+            <img src="assets/img/icon-total.svg"alt="">
+          </div>
           <p class="cards__description">R$ 0,00<p/>
         </div>
       </div>
