feat: cards total customizado, products ajustado alinhamento e adicionado background de product

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div>
   <header class="top">
-   <div class="container">
+   <div class="container delimiter">
     <img src="assets/img/Logo.svg" alt="Logo">
     <button class="btn__top">Nova Transação</button>
    </div> 
   </header>
-  <main>
+  <main class="delimiter">
     <section class="cards-main">
       <div class="container">
         <div class="cards">
@@ -35,7 +36,7 @@
           <p class="cards__description">R$ 0,00<p/>
         </div>
 
-        <div class="cards">
+        <div class="cards cards__total">
           <div>
             <h3 class="cards__title">Total<h3/>
             <img src="assets/img/icon-total.svg"alt="">
@@ -62,8 +63,8 @@
           <div class="background-product">Fevereiro 2022</div>
         </div>
       </div>
-          
     </section>
   </main>
+</div>
 </body>
 </html>
